# Python-Glacier-Mapping-by-Segmentation

./: .gitignore  GEN3_ARCHIVE_COMPLETE.md  README.md  TODO  TODO.md  finder.ipynb  generate_sample_viz.py  istarmap.py  physics_old_generate.py  physics_sandbox.ipynb  predict.ipynb  predict_df.py  predict_slices.py  pyproject.toml  pyrightconfig.json  run_sequential_training.sh  sentinel.ipynb  slice_and_preprocess.py  unet_predict.py  unet_sailency.py  unet_train.py  utils.py  visual.ipynb
app/: app.py
conf/: eval.yaml  get_roc_curve.yaml  predict_slices.yaml  servers.yaml  slice_and_preprocess.yaml  unet_predict.yaml  unet_train.yaml
configs/: bilbo_ci_base.yaml  bilbo_ci_phys128_s1.yaml  bilbo_ci_phys32_s1.yaml  bilbo_ci_phys64_s05.yaml  bilbo_ci_phys64_s075.yaml  bilbo_ci_phys64_s1.yaml  bilbo_ci_physfull_s05.yaml  bilbo_dci_base.yaml  bilbo_dci_phys128_s1.yaml  bilbo_dci_phys32_s1.yaml  bilbo_dci_phys64_s05.yaml  bilbo_dci_phys64_s075.yaml  bilbo_dci_phys64_s1.yaml  bilbo_dci_physfull_s05.yaml  bilbo_multi_base.yaml  bilbo_multi_phys128_s1.yaml  bilbo_multi_phys32_s1.yaml  bilbo_multi_phys64_s05.yaml  bilbo_multi_phys64_s075.yaml  bilbo_multi_phys64_s1.yaml  bilbo_multi_physfull_s05.yaml  desktop_dci_bs16.yaml  desktop_dci_bs16_lr001.yaml  desktop_dci_bs4.yaml  desktop_dci_bs4_w128.yaml  desktop_dci_bs4_w64.yaml  desktop_dci_bs8.yaml  desktop_dci_bs8_d5.yaml  desktop_dci_bs8_drop02.yaml  desktop_dci_bs8_lr0001.yaml  desktop_dci_bs8_lr001.yaml  desktop_dci_bs8_w16.yaml  desktop_dci_bs8_w64.yaml  desktop_dci_bs8_wd1e4.yaml  desktop_velocity_dci_test.yaml  frodo_ci_base.yaml  frodo_ci_f00001.yaml  frodo_ci_f0001.yaml  frodo_ci_f001.yaml  frodo_ci_f01.yaml  (+36 more)
configs/_archive_gen1_gen2/: FINDINGS.md  README.md
configs/_archive_gen3/: FINDINGS.md
configs/datasets/: bibek_w512_o64_f1_v2_phys64_s075_velocity.yaml  bibek_w512_o64_f1_v2_phys64_s075_velocity_multiclass.yaml  bibek_w512_o64_f1_v2_phys64_s1_velocity.yaml
configs/experiments/: exp_001_baseline_ci_v2.yaml  exp_002_baseline_debris_v2.yaml  exp_003_baseline_multiclass_v2.yaml  exp_004_baseline_ci_v2_labelsmooth01.yaml  exp_005_baseline_ci_v2_labelsmooth02.yaml  exp_006_baseline_ci_v2_depth5.yaml  exp_007_baseline_ci_v2_wide64.yaml  exp_008_baseline_ci_v2_depth5_wide64.yaml  exp_027_physics_ci_phys32_s1.yaml  (+49 more)
experiments/: monitor.py  submit.py  worker.py
glacier_mapping/: __init__.py  debugging.py  eval.py  get_roc_curve.py  gpu_check.py  physics_old_generate.py  predict_df.py  predict_slices.py  slice_and_preprocess.py  streamlit_example.py  unet_predict.py  unet_sailency.py  unet_train.py  utils.py
notebooks/: debug.ipynb  ee.ipynb  finder.ipynb  fishnet.geojson  its_live.ipynb
scripts/: __init__.py  create_velocity_from_itslive_mosaic.py  optimized_launcher.py  predict.py  preprocess.py  ray_train.py  run_all_servers.sh  test_new_visualization.py  train.py  upload_to_mlflow.py
src/: eval.py  get_roc_curve.py  predict_df.py  predict_slices.py  slice_and_preprocess.py  unet_sailency.py  unet_train.py  utils.py
(+287 files in other folders)
