[tool.poetry]
name = "glacier_mapping"
version = "0.1.0"
description = ""
authors = ["Jose G. Perez <josegperez@mail.com>", "Bibek Aryal"]
readme = "README.md"

[tool.poetry.dependencies]
addict = "^2.4.0"
geopandas = "^0.14.0"
numba = "^0.58.0"
pandas = "^2.1.1"
python = "~3.10"
pyyaml = "^6.0.1"
rasterio = "^1.3.8"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
tensorboard = "^2.14.1"
torch = "^2.1.0"
torchvision = "^0.16.0"
tqdm = "^4.66.1"
elasticdeform = "^0.5.0"
earthaccess = "^0.9.0"
pyproj = "^3.6.1"
netcdf4 = "^1.6.5"
xarray = "^2024.5.0"
rioxarray = "^0.15.5"
earthengine-api = "^0.1.403"
zarr = "^2.18.1"
s3fs = "^2024.5.0"
segmentation-models-pytorch = "^0.3.3"
opencv-python = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
ipykernel = "^6.29.4"
poethepoet = "^0.26.1"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu121"
# priority = "supplemental"

# [tool.poe.tasks]
# install-nnmorpho = "pip install nnmorpho"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = []